# coursework_6

./: .env.example  README.md  pyproject.toml
market_postgres/: docker-compose.yaml
skymarket/ads/: admin.py  filters.py  models.py  permissions.py  serializers.py
skymarket/ads/migrations/: 0001_initial.py
skymarket/ads/urls/: ad.py  comment.py
skymarket/ads/views/: ad.py  comment.py
skymarket/fixtures/: users.json
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  models.py  serializers.py  urls.py
skymarket/users/migrations/: 0001_initial.py
