[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "coursework_6"}]

[tool.poetry.dependencies]
python = "^3.10"
django-cors-headers = "3.8.0"
django-filter = "21.1"
django-phonenumber-field = "6.0.0"
django-templated-mail = "1.1.1"
djangorestframework = "3.13.1"
djangorestframework-simplejwt = "4.8.0"
djoser = "2.1.0"
drf-nested-routers = "0.93.4"
drf-yasg = "1.20.0"
idna = "3.3"
inflection = "0.5.1"
isort = "5.10.1"
pillow = "9.0.0"
psycopg2-binary = "^2.9.5"
social-auth-app-django = "4.0.0"
social-auth-core = "4.2.0"
django-rest-swagger = "^2.2.0"
drf-spectacular = "^0.24.2"
phonenumbers = "^8.13.0"

[tool.poetry.group.dev.dependencies]
django = "3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
